--- a/single-blog2.html
+++ b/single-blog2.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>sofax || Responsive HTML 5 Template</title>
+  <title>AdnAgile || Sublimons vos savoir-faire</title>
 
-  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/v5/logo.ico" type="image/x-icon">
+  <link rel="icon" href="assets/images/v5/logo.ico" type="image/x-icon">
   <!--- End favicon-->
 
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:wght@100..900&display=swap"
+    rel="stylesheet">
   <!-- End google font  -->
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -66,14 +68,15 @@
   <div id="header-container"></div>
 
 
+
   <div class="sofax-breadcrumb">
     <div class="container">
-      <h1 class="post__title">Portfolio Details</h1>
+      <h1 class="post__title">Blog</h1>
       <nav class="breadcrumbs">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><img src="assets/images/about/arrow.png" alt=""></li>
-          <li aria-current="page"> Portfolio Details</li>
+          <li aria-current="page"> Pourquoi AdnAgile est le Partenaire Idéal pour l’Intégration de Zoho CRM</li>
         </ul>
       </nav>
 
@@ -82,114 +85,61 @@
   <!-- End breadcrumb -->
   <section class="sofax-section-padding2">
     <div class="container">
-      <div class="sofax-default-content portfolio-details-content">
-        <h2>Gradients can range from simple transitions to more complex ones</h2>
-      </div>
-      <div class="portfolio-details-thumb wow fadeInUpX">
-        <img src="assets/images/portfolio/image3.png" alt="">
-      </div>
-      <div class="sofax-portfolio-authore">
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="portfolio-details-content2">
-              <p>Client :</p>
-              <h4>Henry Company</h4>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="portfolio-details-content2">
-              <p>Services :</p>
-              <h4>Web Design</h4>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="portfolio-details-content2">
-              <p>Date :</p>
-              <h4>March 27, 2024</h4>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="portfolio-details-content2">
-              <p>Website :</p>
-              <h4>Preview Project<a href="#"><img src="assets/images/portfolio/Icon1.png" alt=""></a></h4>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="portfolio-details-content3">
-        <h3>Project Overview :</h3>
-        <p>"Gradient Web Design" sounds like a project focused on incorporating gradients into web design. Gradients are a popular design element that involve a smooth transition between two or more colors. By creating a comprehensive project overview, you can ensure that the Gradient Web Design project progresses smoothly and achieves its objectives effectivel</p>
-      </div>
-      <div class="sofax-portfolio-authore-wrap">
-        <div class="sofax-portfolio-authore-text">
-          <h4>1. Objective </h4>
-          <p>The objective of this project is to leverage gradient design elements to enhance the visual appeal, user experience, and overall aesthetics of our website.</p>
-        </div>
-        <div class="sofax-portfolio-authore-text">
-          <h4>2. Scope</h4>
-          <p>Integrating gradient designs into various components of the website, including but not limited to backgrounds, buttons, text elements, headers, & illustrations.</p>
-        </div>
-        <div class="sofax-portfolio-authore-text">
-          <h4>3. Target Audience </h4>
-          <p>Our target audience consists of define your target to audience demographics, interests, etc. The gradient designs will resonate with this audience.</p>
-        </div>
-        <div class="sofax-portfolio-authore-text">
-          <h4>4. Research </h4>
-          <p>Conduct research on current trends in web design, specifically focusing. Analyze competitor websites industry-leading examples to gather inspiration & identify. </p>
-        </div>
-      </div>
-      <div class="portfolio-details-content-bottom">
-        <h3>Positive User Feedback :</h3>
-        <p>User feedback on the gradient designs has been overwhelmingly positive, with many users expressing that appreciation for the visually appealing & dynamic nature of the website. Users have reported that gradient designs contribute to a more immersive & enjoyable browsing experience, encouraging them to spend more time exploring the site.</p>
-      </div>
-    </div>
-  </section>
-  <!-- end section -->
-  <section class="sofax-section-padding bg-light">
-    <div class="container">
-      <div class="sofax-section-title center max-width-large">
-        <h2>Related Project</h2>
-      </div>
       <div class="row">
-        <div class="col-lg-6">
-          <div class="sofax-portfolio-content-wrap wow fadeInUpX" data-wow-delay="0.1s">
-            <div class="sofax-portfolio-thumb">
-              <a href="single-portfolio.html">
-                <img src="assets/images/v5/image4.png" alt="">
-              </a>
+        <div class="col-lg-8">
+          <div class="sofax-inner-blog-details-wrap">
+            <div class="sofax-inner-blog-details-img wow fadeInUpX">
+              <img src="assets/images/blog/blogthumb1.png" alt="">
             </div>
-            <a href="single-portfolio.html">
-              <div class="sofax-portfolio-author-wrap">
-                <div class="sofax-portfolio-author-data">
-                  <h4>Responsive Web Design</h4>
-                  <p>Web design & development</p>
-                </div>
-                <div class="sofax-portfolio-author-icon">
-                  <img src="assets/images/v5/icon5.png" alt="">
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="sofax-portfolio-content-wrap wow fadeInUpX" data-wow-delay="0.2s">
-            <div class="sofax-portfolio-thumb">
-              <a href="single-portfolio.html">
-                <img src="assets/images/v5/image3.png" alt="">
-              </a>
+            <div class="sofax-inner-blog-details-content">
+              <h3>Introduction</h3>
+              <p>L’implémentation d’un CRM est une étape clé pour toute entreprise souhaitant structurer et optimiser
+                ses processus commerciaux. Cependant, un déploiement mal maîtrisé peut entraîner des pertes de temps et
+                de productivité. C’est pourquoi AdnAgile accompagne ses clients à chaque étape de l’intégration de Zoho
+                CRM.</p>
             </div>
-            <a href="single-portfolio.html">
-              <div class="sofax-portfolio-author-wrap">
-                <div class="sofax-portfolio-author-data">
-                  <h4>Smart Watch Design</h4>
-                  <p>App design & development</p>
-                </div>
-                <div class="sofax-portfolio-author-icon">
-                  <img src="assets/images/v5/icon5.png" alt="">
-                </div>
-              </div>
-            </a>
+            <div class="sofax-inner-blog-details-content-data">
+              <h4>1. Nos services pour une intégration réussie</h4>
+              <ul>
+                <li>Audit et analyse des besoins : Identification des processus à optimiser et des fonctionnalités CRM à
+                  prioriser.</li>
+                <li>Paramétrage sur mesure : Configuration des modules, champs personnalisés et automatisations
+                  spécifiques.</li>
+                <li>Migration des données : Import sécurisé depuis d’anciens systèmes CRM ou fichiers Excel.</li>
+                <li>Formation et accompagnement : Sessions de formation pour une adoption rapide par les équipes.</li>
+              </ul>
+            </div>
+            <div class="sofax-inner-blog-details-content2 light-color">
+              <h3>"Expertise reconnue : Partenaire Zoho Premium avec des années d’expérience en intégration CRM."</h3>
+            </div>
+            <div class="sofax-inner-blog-details-content-data">
+              <h4>2. Pourquoi faire confiance à AdnAgile ?</h4>
+              <ul>
+                <li>Expertise reconnue : Partenaire Zoho Premium avec des années d’expérience en intégration CRM.</li>
+                <li>Approche personnalisée : Chaque projet est unique, nous adaptons Zoho CRM aux besoins spécifiques de
+                  votre entreprise.</li>
+                <li>Support technique et évolutif : Un accompagnement post-implémentation pour assurer l’évolution de
+                  votre CRM au fil du temps.</li>
+                <li>Intégration avec d’autres outils : Connexion de Zoho CRM avec des applications externes comme ERP,
+                  outils de facturation ou plateformes e-commerce.</li>
+              </ul>
+            </div>
+            <div class="sofax-inner-blog-details-content-data">
+              <h4>3. Une approche sur mesure pour chaque entreprise</h4>
+              <p>Chez AdnAgile, nous savons que chaque entreprise a ses propres défis et objectifs. C'est pourquoi nous
+                adoptons une approche collaborative et agile, garantissant une intégration adaptée à votre environnement
+                et une transition en douceur. Notre objectif est de vous fournir un CRM performant, évolutif et
+                parfaitement aligné avec votre stratégie de croissance.</p>
+            </div>
+            <div class="sofax-inner-blog-details-content-data">
+              <h4>Conclusion</h4>
+              <p>En choisissant AdnAgile, vous bénéficiez d’un partenaire qui comprend vos besoins et vous accompagne tout au long de votre transformation digitale. Notre expertise Zoho CRM vous permet de gagner en efficacité, d’améliorer la satisfaction client et d’optimiser vos processus internes. Vous souhaitez en savoir plus ? Parlons de votre projet et trouvons ensemble la meilleure solution !</p>
+            </div>
+
           </div>
+
+
+
         </div>
       </div>
     </div>
@@ -218,7 +168,7 @@
           <img src="assets/images/service/icon1.png" alt="">
         </div>
         <div class="sofax-service-slider-data light-color">
-          <h2>Social Media Markating</h2>
+          <h2>Social Media Marketing</h2>
         </div>
       </div>
       <div class="sofax-service-slider-wrap">
@@ -226,19 +176,20 @@
           <img src="assets/images/service/icon1.png" alt="">
         </div>
         <div class="sofax-service-slider-data light-color">
-          <h2>Social Media Markating</h2>
+          <h2>Social Media Marketing</h2>
         </div>
       </div>
     </div>
   </section>
   <!-- end section -->
+
   <footer class="sofax-footer-section">
     <div class="container">
       <div class="sofax-footer-titlev5 position-ralatiove">
         <div class="row">
           <div class="col-xl-8 col-lg-8">
             <div class="tg-heading-subheading animation-style3">
-              <h2>Let's embark on a digital journey together!</h2>
+              <h2>Faites confiance à notre expertise pour vous accompagner tout au long de ce parcours digital.</h2>
             </div>
             <div class="sofax-footer-shapev5">
               <img src="assets/images/v5/shape1.png" alt="">
@@ -251,7 +202,9 @@
             <div class="sofax-footer-title-btn-wrap">
               <a class="sofax-footer-title-btn-icon" href="contact-us.html">
                 <svg width="30" height="27" viewBox="0 0 30 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M5.861 2.21467C5.97102 0.95711 7.07967 0.0268449 8.33723 0.136868L27.6584 1.82725C28.9159 1.93727 29.8462 3.04591 29.7362 4.30348L28.0458 23.6246C27.9358 24.8822 26.8271 25.8124 25.5695 25.7024C24.312 25.5924 23.3817 24.4837 23.4917 23.2262L24.7012 9.40225L4.41495 26.4244C3.44792 27.2359 2.00619 27.1097 1.19476 26.1427C0.383325 25.1757 0.509462 23.7339 1.47649 22.9225L21.7627 5.90034L7.9388 4.6909C6.68124 4.58088 5.75098 3.47223 5.861 2.21467Z" fill="#0E0E0E" />
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M5.861 2.21467C5.97102 0.95711 7.07967 0.0268449 8.33723 0.136868L27.6584 1.82725C28.9159 1.93727 29.8462 3.04591 29.7362 4.30348L28.0458 23.6246C27.9358 24.8822 26.8271 25.8124 25.5695 25.7024C24.312 25.5924 23.3817 24.4837 23.4917 23.2262L24.7012 9.40225L4.41495 26.4244C3.44792 27.2359 2.00619 27.1097 1.19476 26.1427C0.383325 25.1757 0.509462 23.7339 1.47649 22.9225L21.7627 5.90034L7.9388 4.6909C6.68124 4.58088 5.75098 3.47223 5.861 2.21467Z"
+                    fill="#0E0E0E" />
                 </svg><span></span>
               </a>
             </div>
@@ -262,8 +215,10 @@
         <div class="row">
           <div class="col-xl-4 col-md-12">
             <div class="sofax-footer-wrap mr-25">
-              <a href="index.html"><img src="assets/images/logo/logo-dark.svg" alt=""></a>
-              <p>Sofax has many plans for the future to work with great clients and continue to work with agencies.</p>
+              <a href="index.html"><img src="assets/images/v5/logo.jpeg" alt=""></a>
+              <p>Envie d'explorer le monde Crm, de préparer votre voyage ?
+                ADN Agile sera votre sherpa</p>
+              <!--
               <div class="sofax-social-icon">
                 <ul>
                   <li>
@@ -300,45 +255,46 @@
                   </li>
                 </ul>
               </div>
+              -->
             </div>
           </div>
           <div class="col-xl-3 col-md-4">
             <div class="sofax-footer-menu ml-50">
               <h5>Company</h5>
               <ul>
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="contact-us.html">Contact US</a></li>
-                <li><a href="contact-us.html">Privacy Policy</a></li>
-                <li><a href="terms&condition.html">Terms & Conditions</a></li>
+                <li><a href="mailto:contact@adnagile.com">A propos</a></li>
+                <li><a href="mailto:contact@adnagile.com">Nous contacter</a></li>
+                <li><a href="terms&condition.html">Mentions legales</a></li>
               </ul>
             </div>
           </div>
+
           <div class="col-xl-2 col-md-4">
             <div class="sofax-footer-menu">
-              <h5>Utility pages</h5>
+              <h5>Nos certifications</h5>
               <ul>
-                <li><a href="contact-us.html">Instructions</a></li>
-                <li><a href="contact-us.html">Style guide</a></li>
-                <li><a href="404.html">404 Pages</a></li>
-                <li><a href="contact-us.html">Licenses</a></li>
+                <li><img src="assets/images/v5/Crm Premium.jpg" alt=""></li>
+
               </ul>
             </div>
           </div>
+
           <div class="col-xl-3 col-md-4">
             <div class="sofax-footer-menu">
-              <h5>Subscribe to our newsletter</h5>
+              <h5>Nous contacter</h5>
               <div class="sofax-subscription-field5">
                 <form action="#">
-                  <input type="email" placeholder="Enter your email">
-                  <button class="sofax-subcribe-btn2">Subscribe now</button>
+                  <input type="email" placeholder="Votre email">
+                  <a href="mailto:contact@adnagile.com"></a><button class="sofax-subcribe-btn2">Envoyer</button>
                 </form>
               </div>
             </div>
           </div>
+
         </div>
       </div>
       <div class="sofax-footer-bottom center">
-        <p>© 2024 Mthemeus All Rights Reserved.</p>
+        <p>© 2024 AdnAgile</p>
       </div>
     </div>
   </footer>
@@ -367,7 +323,6 @@
   <script src="assets/js/ScrollTrigger.js"></script>
   <script src="assets/js/SplitText.js"></script>
   <script src="assets/js/gsap-animation.js"></script>
-
   <script>
     fetch("header.html")
       .then(response => response.text())
@@ -384,4 +339,5 @@
   <script src="assets/js/app.js"></script>
 
 </body>
+
 </html>
