--- a/blog.html
+++ b/blog.html
@@ -126,7 +126,7 @@
                 </a>
                 <p>Mettre en place Zoho CRM est une excellente décision, mais pour en tirer le meilleur parti, il est crucial de bien le configurer et de l’adapter aux besoins spécifiques de votre entreprise.</p>
               </div>
-              <a class="sofax-icon-btn sofax-blog-icon-btn" href="single-blog1.html">En savoir plus <img src="assets/images/v1/arrow-right.png" alt="Fleche"></a>
+              <a class="sofax-icon-btn sofax-blog-icon-btn" href="single-blog1.html">En savoir plus <img src="assets/images/v1/arrow-right.png" alt=""></a>
             </div>
           </div>
           <div class="sofax-inner-blog-wrap wow fadeInUpX">
