--- a/single-blog2.html
+++ b/single-blog2.html
@@ -89,7 +89,7 @@
         <div class="col-lg-8">
           <div class="sofax-inner-blog-details-wrap">
             <div class="sofax-inner-blog-details-img wow fadeInUpX">
-              <img src="assets/images/blog/blogthumb1.png" alt="">
+              <img src="assets/images/v5/imagesadn.png" alt="Crm">
             </div>
             <div class="sofax-inner-blog-details-content">
               <h3>Introduction</h3>
