--- a/header.html
+++ b/header.html
@@ -26,11 +26,13 @@
                 <a href="about-us.html" class="nav-link-item" style="text-align: center;">A propos</a>
               </li>
               <li class="nav-item">
-                <a href="service.html" class="nav-link-item" style="text-align: center;">Nos services</a>
+                <a href="service.html" class="nav-link-item" style="text-align: center;">Services</a>
               </li>
-
               <li class="nav-item">
-                <a href="https://www.youtube.com/@AdnAgile-k5w" target="_blank" class="nav-link-item" style="text-align: center;">Notre chaine
+                <a href="blog.html" class="nav-link-item" style="text-align: center;">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a href="https://www.youtube.com/@AdnAgile-k5w" target="_blank" class="nav-link-item" style="text-align: center;">
                   Youtube</a>
               </li>
 
